2014-11-26  Adhemerval Zanella  <azanella@linux.ibm.com>

	* csu/tst-atomic.c (do_test): Add atomic_exchange_and_add_{acq,rel}
	tests.
	* sysdeps/powerpc/bits/atomic.h
	(__arch_atomic_exchange_and_add_32_acq): Add definition.
	(__arch_atomic_exchange_and_add_32_rel): Likewise.
	(atomic_exchange_and_add_acq): Likewise.
	(atomic_exchange_and_add_rel): Likewise.
	* sysdeps/powerpc/powerpc32/bits/atomic.h
	(__arch_atomic_exchange_and_add_64_acq): Add definition.
	(__arch_atomic_exchange_and_add_64_rel): Likewise.
	* sysdeps/powerpc/powerpc64/bits/atomic.h
	(__arch_atomic_exchange_and_add_64_acq): Add definition.
	(__arch_atomic_exchange_and_add_64_rel): Likewise.

2014-11-26  Torvald Riegel  <triegel@redhat.com>

	* nptl/tpp.c (__init_sched_fifo_prio, __pthread_tpp_change_priority):
	Change synchronization of __sched_fifo_min_prio and
	__sched_fifo_max_prio.
	* nptl/pthread_mutexattr_getprioceiling.c
	(pthread_mutexattr_getprioceiling): Likewise.
	* nptl/pthread_mutexattr_setprioceiling.c
	(pthread_mutexattr_setprioceiling): Likewise.
	* nptl/pthread_mutex_init.c (__pthread_mutex_init): Likewise.
	* nptl/pthread_mutex_setprioceiling.c (pthread_mutex_setprioceiling):
	Likewise.

2014-11-26  Joseph Myers  <joseph@codesourcery.com>

	* setjmp/jmpbug.c (test): Make foo volatile and cast it to
	void.

2014-11-25  Joseph Myers  <joseph@codesourcery.com>

	* stdio-common/tst-printf-round.c (test_hex_in_one_mode): Make
	third argument const.

2014-11-25  Paul Eggert  <eggert@cs.ucla.edu>

	fnmatch: work around GCC compiler warning bug with uninit var
	* posix/fnmatch_loop.c (FCT): Use a scalar not a one-item array.
	This works around a bug with x86-64 GCC 4.9.2 and earlier
	where 'gcc -O2 -Wmaybe-uninitialized' incorrectly complains
	"../locale/weightwc.h:93:7: warning: '*((void *)&str+4)' may be
	used uninitialized in this function [-Wmaybe-uninitialized]".

2014-11-25  Joseph Myers  <joseph@codesourcery.com>

	* posix/bug-regex31.c (main): Return RES not 0.
